--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,13 @@ a:active { text-decoration: none; }
   align-items: center;
 }
 
+.nav-sticky {
+  background-color: rgba(255, 255, 255, 0.9);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
 .nav-link {
   padding: 28px 0;
   transition: blue .3s;
@@ -68,6 +75,26 @@ a:active { text-decoration: none; }
   font-weight: 600;
   text-align: center;
   font-size: 3.5rem;
+}
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-left: 10%;
+  padding-top: 5%;
+  height: 650px;
+}
+
+.hero-title {
+  font-size: 4rem;
+}
+
+.hero-subtext {
+  margin-top: 0;
+  font-size: 1.2rem;
+  margin-right: 50%;
 }
 
 .logo-container {
