--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -155,13 +155,31 @@
 
 .articleCardImage {
   width: 100%;
+  height: 12rem;
+  object-fit: cover;
 }
 
 .articleGrid {
   display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 1.5em;
-    grid-row-gap: 1.5em;
-    padding: 1.5em;
-    max-width: 1000px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 1.5em;
+  grid-row-gap: 1.5em;
+  padding: 1.5em;
+  max-width: 1000px;
+}
+
+.answerGrid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1.5em;
+  grid-row-gap: 1.5em;
+  padding: 1.5em;
+  max-width: 1000px;
+  grid-auto-rows: minmax(150px, auto);
+}
+
+.answerCardImage {
+  width: 100%;
+  height: 8rem;
+  object-fit: cover;
 }
