--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -162,18 +162,18 @@
 .articleGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 1.5em;
-  grid-row-gap: 1.5em;
-  padding: 1.5em;
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 1.5rem;
+  padding: 1.5rem;
   max-width: 1000px;
 }
 
 .answerGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 1.5em;
-  grid-row-gap: 1.5em;
-  padding: 1.5em;
+  grid-column-gap: 1.25rem;
+  grid-row-gap: 1.5rem;
+  padding: 1.25rem;
   max-width: 1000px;
   grid-auto-rows: minmax(150px, auto);
 }
@@ -182,4 +182,12 @@
   width: 100%;
   height: 8rem;
   object-fit: cover;
+}
+
+.answerCardText {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 1rem 1.25rem 1.25rem 1.25rem;
 }
