--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -191,3 +191,31 @@
   align-items: baseline;
   padding: 1rem 1.25rem 1.25rem 1.25rem;
 }
+
+.buttonStyle {
+  font-size: 1.25rem;
+  padding: 12px 30px;
+  /* text-transform: uppercase; */
+  color: white;
+  border-radius: 30px;
+  text-align: center;
+  box-shadow: 
+    0 2px 2px 0 rgb(156 39 176 / 14%), 
+    0 3px 1px -2px rgb(156 39 176 / 20%), 
+    0 1px 5px 0 rgb(156 39 176 / 12%);
+  background-color: #9c27b0;
+  transition: 
+    box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), 
+    background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.buttonStyle:hover,
+.buttonStyle:focus,
+.buttonStyle:target {
+  color: white;
+  box-shadow: 
+    0 14px 26px -12px rgb(156 39 176 / 42%), 
+    0 4px 23px 0px rgb(0 0 0 / 12%), 
+    0 8px 10px -5px rgb(156 39 176 / 20%);
+  /* background-color: #9c27b0; */
+}
