--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, Roboto, Oxygen,
+  font-family: -apple-system, 'Raleway', Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* background-color: azure; */
   background-color: rgb(250, 250, 250);
 }
 
 h1, h2, h3, h4 {
-  font-family: -apple-system, Roboto, Oxygen,
+  font-family: -apple-system, 'Raleway', Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: 500;
 }
@@ -81,7 +81,7 @@ a:active { text-decoration: none; }
   width: auto;
 }
 .banner h1 {
-  font-weight: 600;
+  font-weight: 700;
   text-align: center;
   font-size: 3.5rem;
 }
