added button active state and removed margin bottom for answer card text, also changed order of content in nav bar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -209,6 +209,10 @@
     background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.buttonStyle:active {
+  background-color: #8f1fa3;
+}
+
 .buttonStyle:hover,
 .buttonStyle:focus,
 .buttonStyle:target {
