--- a/pages/ask/EmailForm.module.css
+++ b/pages/ask/EmailForm.module.css
@@ -18,17 +18,15 @@
 }
 
 .formField:nth-child(1) {
-  padding-right: 0.5em;
+  padding-right: 1em;
 }
 
-.formField:nth-child(2) {
-  padding-left: 0.5em;
-}
 
 .formField {
   display: flex;
   flex-direction: column;
   flex: 1;
+  margin-bottom: 1em;
 }
 
 .textArea {
@@ -56,8 +54,9 @@
   font-weight: 700;
   padding: .75em 1.5em;
   cursor: pointer;
-  background: #c8d0d5cf none;
-  color: rgba(0,0,0,.6);
+  background: #E638FE;
+  color: white;
+  /* color: rgba(0,0,0,.6); */
   border: none;
   border-radius: .28571429rem;
   transition: all .1s ease;
@@ -65,6 +64,6 @@
 
 .submitButton:hover,
 .submitButton:active {
-  background: #868c91cf none;
-  color: rgba(0,0,0,.8);
+  background: #da11f5;
+  /* color: rgba(0,0,0,.8); */
 }
