--- a/pages/ask/EmailForm.module.css
+++ b/pages/ask/EmailForm.module.css
@@ -68,3 +68,16 @@
   background: #da11f5;
   /* color: rgba(0,0,0,.8); */
 }
+
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formBody {
+  display: flex;
+  flex-direction: column;
+  max-width: 550px;
+  width: 100%;
+}
