--- a/pages/ask/EmailForm.module.css
+++ b/pages/ask/EmailForm.module.css
@@ -81,3 +81,19 @@
   max-width: 550px;
   width: 100%;
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 600px) {
+  .rowField {
+    flex-direction: column;
+  }
+
+  .formField:nth-child(1) {
+    padding: 0;
+  }
+  
+  .formBody {
+    padding: 10px;
+  }
+}
