--- a/styles/globals.css
+++ b/styles/globals.css
@@ -267,6 +267,10 @@ a:active { text-decoration: none; }
   .hero-title {
     font-size: 4rem !important;
   } 
+
+  #heroButton1 {    
+    align-self: center;
+  }
 }
 
 @media only screen and (max-width: 430px) {
