adjusted copyright text margin to accomodate smaller screens

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -48,7 +48,7 @@ a.footerText:hover {
 
 .copyRightText {
   text-align: center;
-  margin: 2rem 0 1rem 0;
+  margin: 2rem 2rem 1rem 2rem;
   color: #cacaca;
 }
 
