updated nav for topics and category slug pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,6 +57,9 @@ a:active { text-decoration: none; }
 .nav-link a{
   color: inherit;
 }
+/* .nav-link a:hover {
+  color: black;
+} */
 
 .wrapper-nav {
   display: inline-block;
