--- a/styles/globals.css
+++ b/styles/globals.css
@@ -135,7 +135,7 @@ a:active { text-decoration: none; }
 }
 
 .topic-body {
-  height: 100%;
+  min-height: 60vh;
   margin: 0 15% 0 15%;
   padding-top: 2rem;
   padding-bottom: 3rem;
