added padding to list items in topics and catergoy pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -274,6 +274,10 @@ a:active { text-decoration: none; }
   padding: 24px 26px;
 }
 
+.listContentStyle {
+  padding: 3px 0;
+}
+
 /* Media Queries */
 
 @media only screen and (max-width: 768px) {
