--- a/styles/globals.css
+++ b/styles/globals.css
@@ -356,8 +356,25 @@ a:active { text-decoration: none; }
 }
 
 /* Media Queries */
+@media only screen and (max-width: 905px) {
+  .logo {
+    font-size: 2rem;
+  }
 
-@media only screen and (max-width: 840px) {
+  .logo-sub-text {
+    font-size: 12px;
+  }
+
+  .nav-style {
+    font-size: 14px;
+  }
+
+  .nav-style > a {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 850px) {
   .nav-links {
     display: none;
   }
