Used nextjs/image component for article Card author image

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -168,6 +168,10 @@
   max-width: 1000px;
 }
 
+.authorImage {
+  border-radius: 9999px;
+}
+
 .answerGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
