--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,11 @@ h1, h2, h3, h4 {
   font-weight: 500;
 }
 
+blockquote {
+  font-size: 1.125rem;
+  text-align: justify;
+}
+
 /* Article Image and caption Style */
 
 figure {
