--- a/styles/globals.css
+++ b/styles/globals.css
@@ -397,6 +397,11 @@ a:active { text-decoration: none; }
   padding: 3px 0;
 }
 
+.endNote {
+  font-size: 0.925rem;
+  word-break: break-word;
+}
+
 /* Media Queries */
 @media only screen and (max-width: 905px) {
   .logo {
