fix: Add min-width to contact us footer section and translate h1 banner to align with sub text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,6 +143,7 @@ a:active { text-decoration: none; }
 }
 
 .hero-title {
+  transform: translateX(-4px);
   font-size: 4.3rem !important;
   text-shadow: 1px 1px 3px #272626;
 }
