--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -30,6 +30,10 @@
   align-items: flex-start;
 }
 
+.footerContent:last-child {
+  min-width: 28ch;
+}
+
 .missionText {
   font-size: 0.95rem;
   font-weight: 500;
