Fix: Update API query for search page & fix left padding in info cards

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,10 @@ blockquote {
   text-align: justify;
 }
 
+.pl-zero {
+  padding-inline-start: 0;
+}
+
 /* Article Image and caption Style */
 
 figure {
