--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -64,7 +68,7 @@ figcaption {
 }
 
 a {
-  /* color: inherit; */
+  color: #1e87f0;
   text-decoration: none;
 }
 
@@ -114,8 +118,8 @@ a:active { text-decoration: none; }
   cursor: pointer;
 }
 
-._1440px-nav-container {
-  max-width: 1440px;
+._large-nav-container {
+  max-width: 1188px;
   margin-right: auto;
   margin-left: auto;
   padding-right: 18px;
@@ -174,6 +178,7 @@ a:active { text-decoration: none; }
 .logo {
   font-family: 'Abril Fatface', cursive;
   margin: 2px 0 0 0;
+  font-size: 42px;
 }
 
 .logo-sub-text {
@@ -225,6 +230,7 @@ a:active { text-decoration: none; }
   display: flex;
   position: relative;
   right: 10px;
+  padding-block-end: 20px;
 }
 
 .articleSection {
