Update: Add SWR and pagination buttons for answers page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,37 @@ h1, h2, h3, h4 {
   font-weight: 500;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
+ol {
+  display: block;
+  list-style-type: decimal;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+ul {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 blockquote {
   font-size: 1.125rem;
   text-align: justify;
