--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -154,8 +154,9 @@
 }
 
 .articleCardImage {
-  width: 100%;
-  height: 12rem;
+  position: relative !important;
+  width: 100% !important;
+  height: 12rem !important;
   object-fit: cover;
 }
 
@@ -183,8 +184,9 @@
 }
 
 .answerCardImage {
-  width: 100%;
-  height: 8rem;
+  position: relative !important;
+  width: 100% !important;
+  height: 8rem !important;
   object-fit: cover;
 }
 
