--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,16 @@ h1, h2, h3, h4 {
   font-weight: 500;
 }
 
-h2 {
-  font-size: 2rem;
+.textAreaContainer h1 {
+  font-size: 3rem;
+}
+
+.textAreaContainer h2 {
+  font-size: 2.25rem;
+}
+
+.textAreaContainer h3 {
+  font-size: 1.875rem;
 }
 
 ol {
