Fix: Fix article heading sizes being too big for smaller screen size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,6 +99,7 @@ figcaption {
   align-self: flex-start;
   font-weight: bold;
   font-size: 3rem;
+  margin-bottom: 2.5rem;
 }
 
 .uk-container > p {
@@ -493,6 +494,17 @@ a:active { text-decoration: none; }
   .hero-title {
     font-size: 3.75rem !important;
   } 
+
+  .bannerTitle > h1 {
+    font-size: 2.25rem !important;
+  }
+
+  .textAreaContainer > h2 {
+    font-size: 1.75rem !important;
+  }
+  .textAreaContainer > h3 {
+    font-size: 1.5rem !important;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -511,7 +523,14 @@ a:active { text-decoration: none; }
   }
 
   .bannerTitle > h1 {
-    font-size: 2.2rem !important;
+    font-size: 1.5rem !important;
+  }
+
+  .textAreaContainer > h2 {
+    font-size: 1.25rem !important;
+  }
+  .textAreaContainer > h3 {
+    font-size: 1.125rem !important;
   }
 }
 
