Design: Change Font to Poppins, Remove shadow from hero content

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,16 +6,13 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, 'Raleway', Roboto, Oxygen,
+  font-family: -apple-system, 'Poppins', 'Raleway', Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  /* background-color: azure; */
   background-color: rgb(250, 250, 250);
-  /* color: black; */
+  color: #343434;
 }
 
 h1, h2, h3, h4 {
-  font-family: -apple-system, 'Raleway', Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: 500;
   color: black;
 }
@@ -199,14 +196,15 @@ a:active { text-decoration: none; }
 .hero-title {
   transform: translateX(-4px);
   font-size: 4.3rem !important;
-  text-shadow: 1px 1px 3px #272626;
+  /* text-shadow: 1px 1px 3px #272626; */
 }
 
 .hero-subtext {
   margin-top: 0;
   font-size: 1.4rem;
   margin-right: 40%;
-  text-shadow: 1px 1px 3px #272626;
+  line-height: 1.4;
+  /* text-shadow: 1px 1px 3px #272626; */
 }
 
 .logo-container {
@@ -326,11 +324,11 @@ a:active { text-decoration: none; }
   cursor: pointer;
   border: none;
   /* background: #fc446d; */
-  padding: 0.5em 1.5em;
+  padding: 0.5rem 1.5rem;
   border-radius: .28571429rem;
   color: white;
   font-weight: 500;
-  font-size: 1.1rem;
+  /* font-size: 1rem; */
   margin: 0 12px;
   transition: all .1s ease;
 }
