Feat: Install Daisy UI, Refactor searchList and change name to cardList, Update SearchCard and ArticleCard text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,7 @@ ol {
 
 ul {
   display: block;
+  list-style-type: disc;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
