Feat: Add Breadcrumbs for bible study, Add Bible Study sectio in index

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -189,6 +189,16 @@
   grid-auto-rows: minmax(150px, auto);
 }
 
+.studyGrid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1.25rem;
+  grid-row-gap: 1.5rem;
+  padding: 1.25rem;
+  max-width: 1000px;
+  grid-auto-rows: minmax(150px, auto);
+}
+
 .answerCardImage {
   position: relative !important;
   width: 100% !important;
@@ -247,8 +257,18 @@
   }
 }
 
+@media only screen and (max-width: 640px) {
+  .studyGrid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media only screen and (max-width: 480px) {
   .articleGrid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .studyGrid {
     grid-template-columns: repeat(1, 1fr);
   }
 }
