--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,7 @@ figcaption {
   font-weight: bold;
   font-size: 3rem;
   margin-bottom: 2.5rem;
+  padding-inline: 2.5rem;
 }
 
 .uk-container > p {
@@ -296,6 +297,10 @@ a:active { text-decoration: none; }
   justify-content: center;
   align-items: center;
   background-color: rgb(250, 250, 250);
+}
+
+.sectionPaddingTop {
+  padding-top: 1rem;
 }
 
 .answerContentFlex {
